--- a/404.html
+++ b/404.html
@@ -17,17 +17,23 @@
       <div class="wrapper">
         <div class="topbar-grid-container">
 
-          <a class="site-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип Техномарт" width="108" height="18"></a>
+          <a class="site-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип Техномарт — переход на главную" width="108" height="18"></a>
 
-          <form class="header-search-form" action="#" method="POST">
-            <input class="header-search-field" type="search" placeholder="Поиск:">
-            <button class="search-form-button" type="submit"><span class="visually-hidden">Найти</span></button>
+          <form class="header-search-form" action="https://echo.htmlacademy.ru" method="GET">
+            <label class="visually-hidden" for="header-search">Поиск по сайту</label>
+            <input class="header-search-field" id="header-search" type="search" placeholder="Поиск:">
+            <button class="search-form-button" type="submit">
+              <span class="visually-hidden">Найти</span>
+              <svg class="search-form-icon" width="17" height="17" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" />
+              </svg>
+            </button>
           </form>
 
           <div class="shop-navigation-wrap">
             <ul class="shop-menu-list">
-              <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html">Закладки: <span>0</span></a></li>
-              <li class="shop-menu-item filled"><a class="shop-menu-link cart" href="404.html">Корзина: <span>10</span></a></li>
+              <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html"><span class="shop-menu-label">Закладки:</span> <span class="shop-menu-value">0</span></a></li>
+              <li class="shop-menu-item"><a class="shop-menu-link cart" href="404.html"><span class="shop-menu-label">Корзина:</span> <span class="shop-menu-value">0</span></a></li>
             </ul>
             <a class="header-make-order" href="404.html">Оформить заказ</a>
           </div>
@@ -48,9 +54,17 @@
           </div>
 
           <ul class="user-menu">
-            <li class="user-menu-item login"><a class="user-menu-link" href="404.html"><!-- svg inline here --><span class="login-label">Войти</span></a></li>
+            <li class="user-menu-item login">
+              <a class="user-menu-link login-link" href="404.html">
+                <svg class="login-icon" width="21" height="17" viewBox="0 0 21 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                  <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z"/>
+                  <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z"/>
+                </svg>
+                <span class="login-label">Войти</span>
+              </a>
+            </li>
             <li class="user-menu-item"><a class="user-menu-link" href="404.html">Регистрация</a></li>
-          </ul>         
+          </ul>
         </div>
 
         <nav class="site-navigation">
@@ -74,6 +88,8 @@
     <section class="page-section main">
       <div class="wrapper">
 
+        <h1 class="visually-hidden">Страница 404</h1>
+
         <img src="img/content/404.png" alt="404" width="300" height="200">
 
         <div class="text-content">
@@ -93,7 +109,7 @@
         <div class="footer-upper-grid-container">
 
           <div class="footer-contact-wrap">
-            <a class="footer-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип «Техномарт» красный" width="138" height="23"></a>
+            <a class="footer-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип «Техномарт» — переход на главную страницу" width="138" height="23"></a>
             <address>
               <p class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
             </address>
@@ -127,9 +143,33 @@
           <p class="copyright">© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
 
           <ul class="footer-socials">
-            <li class="footer-socials-item"><a href="https://vk.com/denistugov" target="_blank"><svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><circle class="social-button-bg" cx="22" cy="22" r="20.33"/><path d="M24.5403 25.7281C25.4609 25.4384 26.6395 27.6406 27.8943 28.4834C28.836 29.1219 29.5573 28.9841 29.5573 28.9841L32.9017 28.9372C32.9017 28.9372 34.6495 28.8322 33.8232 27.4803C33.7549 27.3678 33.3389 26.4781 31.334 24.6472C29.2376 22.7319 29.5217 23.0422 32.0456 19.7309C33.5835 17.7125 34.1988 16.4797 34.0062 15.9547C33.8213 15.4494 32.6918 15.5806 32.6918 15.5806L28.9237 15.6059C28.5568 15.6069 28.2458 15.7175 28.1042 16.0887C28.1013 16.0925 27.5062 17.6506 26.7127 18.9753C25.0362 21.7775 24.3669 21.9266 24.0896 21.7512C23.4531 21.3453 23.6139 20.1228 23.6139 19.2537C23.6139 16.5378 24.0299 15.4053 22.7992 15.1128C22.388 15.0153 22.0876 14.9516 21.0389 14.9422C19.6985 14.9225 18.5603 14.9422 17.9151 15.2506C17.4866 15.4597 17.1582 15.9181 17.3575 15.9444C17.6079 15.9772 18.1693 16.0944 18.4697 16.4937C18.8559 17.0112 18.8443 18.1709 18.8443 18.1709C18.8443 18.1709 19.0649 21.3687 18.3243 21.7653C17.8159 22.0372 17.1206 21.4822 15.6252 18.9378C14.8615 17.6366 14.2847 16.1984 14.2847 16.1984C14.2847 16.1984 14.173 15.9312 13.9708 15.785C13.73 15.6116 13.393 15.5562 13.393 15.5562L9.81656 15.5787C9.81656 15.5787 9.27923 15.5937 9.08182 15.8244C8.90656 16.0287 9.06738 16.4506 9.06738 16.4506C9.06738 16.4506 11.8686 22.9016 15.0406 26.1509C17.9488 29.1341 21.2537 28.9362 21.2537 28.9362H22.7511C22.7511 28.9362 23.2027 28.8856 23.4338 28.6437C23.6495 28.4187 23.6399 27.9959 23.6399 27.9959C23.6399 27.9959 23.61 26.0187 24.5403 25.7281Z" fill="#fff"/></svg><span class="visually-hidden">Вконтакте</span></a></li>
-            <li class="footer-socials-item"><a href="https://www.facebook.com/denis.tugov" target="_blank"><svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><circle class="social-button-bg" cx="22" cy="22" r="20.33"/><path d="M28 15v-4h-4a4 4 0 00-4 4v4h-4v4h4v10h4V23h4v-4h-4v-4z" fill="#fff"/></svg><span class="visually-hidden">Фейсбук</span></a></li>
-            <li class="footer-socials-item"><a href="https://www.instagram.com/den0015" target="_blank"><svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><circle class="social-button-bg" cx="22" cy="22" r="20.33"/><path fill-rule="evenodd" clip-rule="evenodd" d="M14 11h15a3 3 0 013 3v15a3 3 0 01-3 3H14a3 3 0 01-3-3V14a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM14 29v-9h1.18a6.5 6.5 0 1012.64 0H29v9H14zm11-11h4v-4h-4v4z" fill="#fff"/></svg><span class="visually-hidden">Инстаграм</span></a></li>
+            <li class="footer-socials-item">
+              <a href="https://vk.com/denistugov" target="_blank">
+                <span class="visually-hidden">Вконтакте</span>
+                <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                  <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
+                  <path d="M24.5403 25.7281C25.4609 25.4384 26.6395 27.6406 27.8943 28.4834C28.836 29.1219 29.5573 28.9841 29.5573 28.9841L32.9017 28.9372C32.9017 28.9372 34.6495 28.8322 33.8232 27.4803C33.7549 27.3678 33.3389 26.4781 31.334 24.6472C29.2376 22.7319 29.5217 23.0422 32.0456 19.7309C33.5835 17.7125 34.1988 16.4797 34.0062 15.9547C33.8213 15.4494 32.6918 15.5806 32.6918 15.5806L28.9237 15.6059C28.5568 15.6069 28.2458 15.7175 28.1042 16.0887C28.1013 16.0925 27.5062 17.6506 26.7127 18.9753C25.0362 21.7775 24.3669 21.9266 24.0896 21.7512C23.4531 21.3453 23.6139 20.1228 23.6139 19.2537C23.6139 16.5378 24.0299 15.4053 22.7992 15.1128C22.388 15.0153 22.0876 14.9516 21.0389 14.9422C19.6985 14.9225 18.5603 14.9422 17.9151 15.2506C17.4866 15.4597 17.1582 15.9181 17.3575 15.9444C17.6079 15.9772 18.1693 16.0944 18.4697 16.4937C18.8559 17.0112 18.8443 18.1709 18.8443 18.1709C18.8443 18.1709 19.0649 21.3687 18.3243 21.7653C17.8159 22.0372 17.1206 21.4822 15.6252 18.9378C14.8615 17.6366 14.2847 16.1984 14.2847 16.1984C14.2847 16.1984 14.173 15.9312 13.9708 15.785C13.73 15.6116 13.393 15.5562 13.393 15.5562L9.81656 15.5787C9.81656 15.5787 9.27923 15.5937 9.08182 15.8244C8.90656 16.0287 9.06738 16.4506 9.06738 16.4506C9.06738 16.4506 11.8686 22.9016 15.0406 26.1509C17.9488 29.1341 21.2537 28.9362 21.2537 28.9362H22.7511C22.7511 28.9362 23.2027 28.8856 23.4338 28.6437C23.6495 28.4187 23.6399 27.9959 23.6399 27.9959C23.6399 27.9959 23.61 26.0187 24.5403 25.7281Z" fill="#fff"/>
+                </svg>
+               </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="https://www.facebook.com/denis.tugov" target="_blank">
+                <span class="visually-hidden">Фейсбук</span>
+                <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                  <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
+                  <path d="M28 15v-4h-4a4 4 0 00-4 4v4h-4v4h4v10h4V23h4v-4h-4v-4z" fill="#fff"/>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="https://www.instagram.com/den0015" target="_blank">
+                <span class="visually-hidden">Инстаграм</span>
+                <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" fill="currentColor" aria-hidden="true" focusable="false">
+                  <circle class="social-button-bg" cx="22" cy="22" r="20.33"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M14 11h15a3 3 0 013 3v15a3 3 0 01-3 3H14a3 3 0 01-3-3V14a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM14 29v-9h1.18a6.5 6.5 0 1012.64 0H29v9H14zm11-11h4v-4h-4v4z" fill="#fff"/>
+                </svg>
+              </a>
+            </li>
           </ul>
 
           <div class="footer-signature">
